--- a/app/src/main/res/layout/activity_detail_map.xml
+++ b/app/src/main/res/layout/activity_detail_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.DetailMapActivity">
+    tools:context=".ui.activity.visual.DetailMapActivity">
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/detail_map"
