--- a/app/src/main/res/layout/activity_vaccine_map.xml
+++ b/app/src/main/res/layout/activity_vaccine_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pokestar.vaccineremind.ui.activity.VaccineMapCCActivity">
+    tools:context="com.example.pokestar.vaccineremind.ui.activity.visual.VaccineMapCCActivity">
 
    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
