--- a/app/src/main/res/layout/activity_vaccine_map_wh.xml
+++ b/app/src/main/res/layout/activity_vaccine_map_wh.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pokestar.vaccineremind.ui.activity.VaccineMapWHActivity">
+    tools:context="com.example.pokestar.vaccineremind.ui.activity.visual.VaccineMapWHActivity">
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/bmapView_wh"
