--- a/app/src/main/res/layout/fragment_vaccine.xml
+++ b/app/src/main/res/layout/fragment_vaccine.xml
@@ -25,6 +25,9 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="10dp"
+                    android:maxHeight="40dp"
+                    android:maxWidth="40dp"
+                    android:scaleType="fitXY"
                     android:src="@drawable/baby"/>
                 <TextView
                     android:id="@+id/text_baby_data"
