--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,5 +38,8 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="spinnerTheme">
+        <item name="android:textColor">@android:color/background_light</item>
+    </style>
 
 </resources>
